--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link rel="stylesheet" href="index.css">
+  <title> Calendrier de l'Avent Ginkgo </title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body><div class='support-grid'></div>
 <section class='grid-1'>
