--- a/01etoiles.html
+++ b/01etoiles.html
@@ -1,7 +1,8 @@
+<!doctype html>
 <html>
 <head>
     <link rel="stylesheet" href="texte.css">
-
+    <meta name="viewport" content="width=device-width; initial-scale=1.0;">
 <title>Étoiles</title>
 </head>
 
