--- a/01etoiles.html
+++ b/01etoiles.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="texte.css">
-    <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+  
 <title>Étoiles</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
