--- a/04matin.html
+++ b/04matin.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="texte.css">
 
 <title>Matin pluvieux</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
