--- a/10fleurs.html
+++ b/10fleurs.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="texte.css">
 
 <title>Fleurs écloses</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
