--- a/11cz2.html
+++ b/11cz2.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="texte.css">
 
 <title>La Bataille du lycée Ginkgo</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
