--- a/12poupees.html
+++ b/12poupees.html
@@ -1,8 +1,10 @@
 <html>
 <head>
     <link rel="stylesheet" href="texte.css">
+   
 
 <title>Poupées</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
