--- a/18peur.html
+++ b/18peur.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="texte.css">
 
 <title>Plus grande peur</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
