--- a/patience.html
+++ b/patience.html
@@ -2,16 +2,17 @@
 <head>
     <link rel="stylesheet" href="texte.css">
 
-<title></title>
+<title>Patience</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
-<h1><br>
+<h2><br>
  
   Avec le temps et la patience, la feuille du mûrier devient satin. <br>
   <br>
-  Il va falloir revenir un autre jour.</h1>
+  Il va falloir revenir un autre jour.</h2>
 
 <p>
 </p>
