--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </div>
   <div class='day-1'>
     <label>
-      <input type='='button' onclick="window.location.href='02eveilles.html';" value="1" >
+      <input type='='button' onclick="window.location.href='01etoiles.html';" value="1" >
         <div class='door'>
           <div class='front'>1</div>
           <div class='back'></div>
@@ -22,7 +22,7 @@
   </div>
   <div class='day-2'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="2" >
+      <input type='button' onclick="window.location.href='02eveilles.html';" value="2" >
         <div class='door'>
           <div class='front'>2</div>
           <div class='back'></div>
