--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   <div class='day-4'>
     <label>
-        <input type='button' onclick="window.location.href='patience.html';" value="4" >
+        <input type='button' onclick="window.location.href='04matin.html';" value="4" >
         <div class='door'>
           <div class='front'>4</div>
           <div class='back'></div>
