--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
   <div class='day-7'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="7" >
+      <input type='button' onclick="window.location.href='07neige.html';" value="7" >
         <div class='door'>
           <div class='front'>7</div>
           <div class='back'></div>
