--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
   <div class='day-10'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="10" >
+      <input type='button' onclick="window.location.href='10fleurs.html';" value="10" >
         <div class='door'>
           <div class='front'>10</div>
           <div class='back'></div>
