--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </div>
   <div class='day-11'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="11" >
+      <input type='button' onclick="window.location.href='11cz2.html';" value="11" >
         <div class='door'>
           <div class='front'>11</div>
           <div class='back'></div>
