--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </div>
   <div class='day-13'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="13" >
+      <input type='button' onclick="window.location.href='13tradition.html';" value="13" >
         <div class='door'>
           <div class='front'>13</div>
           <div class='back'></div>
