--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </div>
   <div class='day-14'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="14" >
+      <input type='button' onclick="window.location.href='14courir.html';" value="14" >
         <div class='door'>
           <div class='front'>14</div>
           <div class='back'></div>
