--- a/15cz3.html
+++ b/15cz3.html
@@ -27,7 +27,7 @@ Le collégien haussa les épaules et rangea la lettre dans sa poche. Il tournait
 <br>
 — Attends, ma mignonne, dit le première en resserrant sa prise sur le collégien, tu vas pas partir comme ça, quand même. Tu voudrais pas nous filer ton argent de poche ? Ou alors tes jolies fringues ? Je suis sûr que ça irait très bien à ma petite sœur.<br>
 <br>
-Ce fut à peine si Ryuichi vit le coup partir. Dans un mouvement souple, il fit plier son adversaire en deux, l’empoigna par un bras et le tira en arrière jusqu’à ce qu’un craquement retentisse dans tout le gymnase. Le Sonkei hurla, mais son cri fut coupé court par un coup de genou dans le sternum. Pour faire bonne mesure sans doute, un crochet en plein visage vint compléter le tableau. Ryuichi ne pouvait en détacher son regard et dut se retenir d’esquisser un sourire.<br>
+Ce fut à peine si Ryuichi vit le coup partir. Dans un mouvement souple, le garçon fit plier son adversaire en deux, l’empoigna par un bras et le tira en arrière jusqu’à ce qu’un craquement retentisse dans tout le gymnase. Le Sonkei hurla, mais son cri fut coupé court par un coup de genou dans le sternum. Pour faire bonne mesure sans doute, un crochet en plein visage vint compléter le tableau. Ryuichi ne pouvait en détacher son regard et dut se retenir d’esquisser un sourire.<br>
 <br>
 Le gamin épousseta son blazer, une lueur de défi dans le regard.<br>
 <br>
