--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   </div>
   <div class='day-15'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="15" >
+      <input type='button' onclick="window.location.href='15cz3.html';" value="15" >
         <div class='door'>
           <div class='front'>15</div>
           <div class='back'></div>
