--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </div>
   <div class='day-16'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="16" >
+      <input type='button' onclick="window.location.href='16frere.html';" value="16" >
         <div class='door'>
           <div class='front'>16</div>
           <div class='back'></div>
