--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
   <div class='day-18'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="18" >
+      <input type='button' onclick="window.location.href='18peur.html';" value="18" >
         <div class='door'>
           <div class='front'>18</div>
           <div class='back'></div>
