--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   </div>
   <div class='day-19'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="19" >
+      <input type='button' onclick="window.location.href='19cz4.html';" value="19" >
         <div class='door'>
           <div class='front'>19</div>
           <div class='back'></div>
