--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   </div>
   <div class='day-21'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="21" >
+      <input type='button' onclick="window.location.href='21baiser.html';" value="21" >
         <div class='door'>
           <div class='front'>21</div>
           <div class='back'></div>
