--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   </div>
   <div class='day-22'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="22" >
+      <input type='button' onclick="window.location.href='22festin.html';" value="22" >
         <div class='door'>
           <div class='front'>22</div>
           <div class='back'></div>
