--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   </div>
   <div class='day-23'>
     <label>
-      <input type='button' onclick="window.location.href='patience.html';" value="23" >
+      <input type='button' onclick="window.location.href='23navire.html';" value="23" >
         <div class='door'>
           <div class='front'>23</div>
           <div class='back'></div>
